attached_assets/Pasted-In-file-included-from-src-advanced-calculations-debug-f_1768921602968.txt
In file included from src/advanced_calculations/../debug/forensic_logger.h:8,
                 from src/advanced_calculations/quantum_simulator.c:19:
src/advanced_calculations/../debug/../common/common_types.h:55:9: warning: "MODULES_QUANTIQUES_ACTIFS" redefined
   55 | #define MODULES_QUANTIQUES_ACTIFS
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
In file included from src/debug/forensic_logger.h:8,
                 from src/debug/forensic_logger.c:2:
src/debug/../common/common_types.h:55:9: warning: "MODULES_QUANTIQUES_ACTIFS" redefined
   55 | #define MODULES_QUANTIQUES_ACTIFS
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
In file included from src/debug/logging_system.h:5,
                 from src/debug/logging_system.c:2:
src/debug/../common/common_types.h:55:9: warning: "MODULES_QUANTIQUES_ACTIFS" redefined
   55 | #define MODULES_QUANTIQUES_ACTIFS
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
In file included from src/lum/lum_core.c:9:
src/lum/../common/common_types.h:55:9: warning: "MODULES_QUANTIQUES_ACTIFS" redefined
   55 | #define MODULES_QUANTIQUES_ACTIFS
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
src/logger/log_manager.c: In function ‘log_manager_create_structure’:
src/logger/log_manager.c:72:41: warning: ‘/modules/’ directive output may be truncated writing 9 bytes into a region of size between 1 and 256 [-Wformat-truncation=]
   72 |         snprintf(path, sizeof(path), "%s/modules/%s", logs_base, modules[i]);
      |                                         ^~~~~~~~~
src/logger/log_manager.c:72:9: note: ‘snprintf’ output 10 or more bytes (assuming 265) into a destination of size 256
   72 |         snprintf(path, sizeof(path), "%s/modules/%s", logs_base, modules[i]);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/logger/log_manager.c: In function ‘log_manager_archive_session’:
src/logger/log_manager.c:100:51: warning: ‘/archive/session_’ directive output may be truncated writing 17 bytes into a region of size between 1 and 256 [-Wformat-truncation=]
  100 |     snprintf(archive_dir, sizeof(archive_dir), "%s/archive/session_%s_%s", logs_base, session_id, timestamp);
      |                                                   ^~~~~~~~~~~~~~~~~
src/logger/log_manager.c:100:5: note: ‘snprintf’ output 19 or more bytes (assuming 305) into a destination of size 256
  100 |     snprintf(archive_dir, sizeof(archive_dir), "%s/archive/session_%s_%s", logs_base, session_id, timestamp);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/logger/log_manager.c:106:56: warning: ‘%s’ directive output may be truncated writing up to 255 bytes into a region of size between 220 and 475 [-Wformat-truncation=]
  106 |              "find %s/current -name '*%s*' -exec mv {} %s/ \\; 2>/dev/null || true",
      |                                                        ^~
  107 |              logs_base, session_id, archive_dir);
      |                                     ~~~~~~~~~~~         
src/logger/log_manager.c:105:5: note: ‘snprintf’ output 62 or more bytes (assuming 572) into a destination of size 512
  105 |     snprintf(command, sizeof(command),
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  106 |              "find %s/current -name '*%s*' -exec mv {} %s/ \\; 2>/dev/null || true",
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  107 |              logs_base, session_id, archive_dir);
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/logger/log_manager.c:112:56: warning: ‘%s’ directive output may be truncated writing up to 255 bytes into a region of size between 220 and 475 [-Wformat-truncation=]
...
  +++ |+#include <stdbool.h>
    1 | #ifdef MODULES_QUANTIQUES_ACTIFS
src/advanced_calculations/quantum_simulator.c:266:11: error: request for member ‘max_entanglement’ in something not a structure or union
  266 |     config->max_entanglement = 64;
      |           ^~
src/advanced_calculations/quantum_simulator.c:267:11: error: request for member ‘use_gpu_acceleration’ in something not a structure or union
  267 |     config->use_gpu_acceleration = false;
      |           ^~
src/advanced_calculations/quantum_simulator.c:268:11: error: request for member ‘temperature_kelvin’ in something not a structure or union
  268 |     config->temperature_kelvin = 0.015;
      |           ^~
src/advanced_calculations/quantum_simulator.c:269:11: error: request for member ‘memory_address’ in something not a structure or union
  269 |     config->memory_address = (void*)config;
      |           ^~
src/advanced_calculations/quantum_simulator.c: At top level:
src/advanced_calculations/quantum_simulator.c:273:29: error: unknown type name ‘quantum_config_t’
  273 | void quantum_config_destroy(quantum_config_t** config_ptr) {
      |                             ^~~~~~~~~~~~~~~~
src/advanced_calculations/quantum_simulator.c:282:29: error: unknown type name ‘quantum_result_t’
  282 | void quantum_result_destroy(quantum_result_t** result_ptr) {
      |                             ^~~~~~~~~~~~~~~~
src/advanced_calculations/quantum_simulator.c:293:1: error: unknown type name ‘quantum_simulator_t’
  293 | quantum_simulator_t* quantum_simulator_create(size_t qubit_count, quantum_config_t* config) {
      | ^~~~~~~~~~~~~~~~~~~
src/advanced_calculations/quantum_simulator.c:293:47: error: unknown type name ‘size_t’
  293 | quantum_simulator_t* quantum_simulator_create(size_t qubit_count, quantum_config_t* config) {
      |                                               ^~~~~~
src/advanced_calculations/quantum_simulator.c:293:47: note: ‘size_t’ is defined in header ‘<stddef.h>’; this is probably fixable by adding ‘#include <stddef.h>’
src/advanced_calculations/quantum_simulator.c:293:67: error: unknown type name ‘quantum_config_t’
  293 | quantum_simulator_t* quantum_simulator_create(size_t qubit_count, quantum_config_t* config) {
      |                                                                   ^~~~~~~~~~~~~~~~
src/advanced_calculations/quantum_simulator.c:306:32: error: unknown type name ‘quantum_simulator_t’
  306 | void quantum_simulator_destroy(quantum_simulator_t** simulator_ptr) {
      |                                ^~~~~~~~~~~~~~~~~~~
src/advanced_calculations/quantum_simulator.c:316:1: error: unknown type name ‘quantum_circuit_t’
  316 | quantum_circuit_t* quantum_circuit_create(size_t qubit_count, size_t max_gates) {
      | ^~~~~~~~~~~~~~~~~
src/advanced_calculations/quantum_simulator.c:316:43: error: unknown type name ‘size_t’
  316 | quantum_circuit_t* quantum_circuit_create(size_t qubit_count, size_t max_gates) {
      |                                           ^~~~~~
src/advanced_calculations/quantum_simulator.c:316:43: note: ‘size_t’ is defined in header ‘<stddef.h>’; this is probably fixable by adding ‘#include <stddef.h>’
src/advanced_calculations/quantum_simulator.c:316:63: error: unknown type name ‘size_t’
  316 | quantum_circuit_t* quantum_circuit_create(size_t qubit_count, size_t max_gates) {
      |                                                               ^~~~~~
src/advanced_calculations/quantum_simulator.c:316:63: note: ‘size_t’ is defined in header ‘<stddef.h>’; this is probably fixable by adding ‘#include <stddef.h>’
src/advanced_calculations/quantum_simulator.c:326:30: error: unknown type name ‘quantum_circuit_t’
  326 | void quantum_circuit_destroy(quantum_circuit_t** circuit_ptr) {
      |                              ^~~~~~~~~~~~~~~~~
make: *** [Makefile:84: src/advanced_calculations/quantum_simulator.o] Error 1
make: *** Waiting for unfinished jobs...